Ongoing work diff functionality.